<resources>
    <string name="app_name">MoralMachine</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_info">infoActivity</string>
    <string name="info_string">Wie funktioniert die App?
Durch Klick auf den Start-Button wird dem Nutzer das Erste von insgesamt 13 Szenarien vorgestellt. Pro Szenario gibt es zwei Entscheidungsmöglichkeiten zwischen denen sich der Nutzer entscheiden muss. Durch einen Klick auf das Bild erhält der User zusätzlich zu dem Bild noch eine textuelle Beschreibung der Entscheidungsmöglichkeit und deren Folgen. Nachdem alle 13 Szenarien absolviert wurden, wird eine Ergebnisseite angezeigt. Die vier Balken stellen die Entscheidungskriterien dar:&#10;
&#10;
        &#10;
        Der Nutzer rettet nie möglichst viele Menschen oder der Nutzer rettet immer möglichst viele Menschen.&#10;
        &#10;
        &#10;
Der Nutzer rettet nie den Fahrer oder der Nutzer rettet immer den Fahrer.&#10;
        &#10;
        &#10;
Der Nutzer lässt das Fahrzeug nie aktiv eingereifen oder der Nutzer lässt das Fahrzeug immer aktiv eingreifen.&#10;
        &#10;
        &#10;
Der Nutzer rettet nie Menschen, die sich an die Verkehrsregeln halten oder der Nutzer rettet immer Menschen, die sich an die Verkehrsregeln halten.
</string>
    <string name="title_activity_result">resultActivity</string>


    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="scen_1_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger</string>
    <string name="scen_2_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger</string>
    <string name="scen_3_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit zwei Fußgängern, die gerade die Straße überqueren. Das Resultat:
Tot: 2 Fußgänger</string>
    <string name="scen_4_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger</string>
    <string name="scen_5_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Der Fußgänger überquert die Straße bei Grün und hält sich damit an das Gesetz.</string>
    <string name="scen_6_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und in zwei Fußgänger, die gerade die Straße überqueren. Das Resultat:
Tot: 2 Fußgänger
Beachte: Die Fußgänger überqueren die Straße bei Rot und halten sich damit nicht an das Gesetz.</string>
    <string name="scen_7_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Der Fußgänger überquert die Straße bei Rot und hält sich damit nicht an das Gesetz.</string>
    <string name="scen_8_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und in drei Fußgänger, die gerade die Straße überqueren. Das Resultat:
Tot: 3 Fußgänger
Beachte: Die Fußgänger überqueren die Straße bei Rot und halten sich damit nicht an das Gesetz.</string>
    <string name="scen_9_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger</string>
    <string name="scen_10_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und in zwei Fußgänger, die gerade die Straße überqueren. Das Resultat:
Tot: 2 Fußgänger
Beachte: Die Fußgänger überqueren die Straße bei Rot und halten sich damit nicht an das </string>
    <string name="scen_11_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse</string>
    <string name="scen_12_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 4 Fahrzeuginsassen</string>
    <string name="scen_13_dec1">In diesem Fall fährt das autonome Fahrzeug mit Bremsenversagen geradeaus weiter und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 3 Fahrzeuginsassen</string>

    <string name="scen_1_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
 </string>
    <string name="scen_2_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
 </string>
    <string name="scen_3_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
 </string>
    <string name="scen_4_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_5_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Der Fußgänger überquert die Straße bei Rot und hält sich damit nicht an das Gesetz. Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
 </string>
    <string name="scen_6_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_7_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Der Fußgänger überquert die Straße bei Grün und hält sich damit an das Gesetz. Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_8_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einem Fußgänger, der gerade die Straße überquert. Das Resultat:
Tot: 1 Fußgänger
Beachte: Der Fußgänger überquert die Straße bei Grün und hält sich damit an das Gesetz. Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
</string>
    <string name="scen_9_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit zwei Fußgängern, die gerade die Straße überqueren. Das Resultat:
Tot: 2 Fußgänger
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.
 </string>
    <string name="scen_10_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit einer Straßensperre aus Beton. Das Resultat:
Tot: 1 Fahrzeuginsasse
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_11_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab kollidiert mit zwei Fußgängern, die gerade die Straße überqueren. Das Resultat:
Tot: 2 Fußgänger
Beachte: Die Fußgänger überqueren die Straße bei Grün und halten sich damit an das Gesetz. Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_12_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit fünf Fußgängern, die gerade die Straße überqueren. Das Resultat:
Tot: 5 Fußgänger
Beachte: Die Fußgänger überqueren die Straße bei Rot und halten sich damit nicht an das Gesetz. Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>
    <string name="scen_13_dec2">In diesem Fall schwenkt das autonome Fahrzeug mit Bremsenversagen ab und kollidiert mit drei Fußgängern, die gerade die Straße überqueren. Das Resultat:
Tot: 3 Fußgänger
Beachte: Hier muss das Fahrzeug aktiv eingreifen um abzuschwenken.</string>

    <string name="backToMenu">Zurück zum Hauptmenü</string>
    <string name="resetStats">Auswertung zurücksetzen</string>
    <string name="interveinDescription">Interventionen des Fahrzeugs</string>
    <string name="utilDescription">Utilitaristisch gehandelt</string>
    <string name="rulesDescription">Regeln eingehalten</string>
    <string name="proDriverDescription">Pro Fahrer gehandelt</string>


</resources>
