<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ur.moralmachine_altmann_ganz_schnell.resultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Ergebnisübersicht"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/interveinDescription" />


    <ProgressBar
        android:id="@+id/interveinStats"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:indeterminate="false"
        android:max="10"
        android:progress="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/proDriverDescription" />

    <ProgressBar
        android:id="@+id/proDriverStats"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:indeterminate="false"
        android:max="8"
        android:progress="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/utilDescription" />

    <ProgressBar
        android:id="@+id/utilStats"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:indeterminate="false"
        android:max="6"
        android:progress="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/rulesDescription" />

    <ProgressBar
        android:id="@+id/rulesStats"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:indeterminate="false"
        android:max="8"
        android:progress="0"

        />

    <Button
        android:id="@+id/resetStats"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/resetStats"


        />

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/backToMenu"

        />


</LinearLayout>
